--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>Git & Github Demo</title>
 </head>
 <body>
-    <h2>thực hiện các bước demo</h2>
+    <h2>Thực hiện các bước demo</h2>
+    <p>Các lệnh git cơ bản</p>
 </body>
 </html>
